rs/macros/tests/ui/gprogram_fails_mut_service_ctor.rs
use sails_macros::program;

struct MyService;

struct MyProgram;

#[program]
impl MyProgram {
    pub fn new() -> Self {
        Self
    }

    pub fn service(&mut self) -> MyService {
        MyService
    }
}

#[tokio::main]
async fn main() {}
